package com.game.controller;

import javafx.stage.Stage;

public class BattleController {
    private Stage stage;

    public BattleController(Stage stage) {
        this.stage= stage;
    }
}
