package com.game.model;

public class Effect {
  private int power;
  private StatusType status;
}
