package com.game.model;

public class Enemy extends Character {

}
