package com.game.model;

public class ItemStats {
  private int damage;
  private int cure;
  private int durability;
}
