package com.game.model;

public class Job {

}
