package com.game.model.character;

public class Stats {
  private int hp;
  private int attack;
  private int defense;
  private int special;
  private int speed;

  public int getHp() {
    return hp;
  }

  public int getAttack() {
    return attack;
  }

  public int getDefense() {
    return defense;
  }

  public int getSpecial() {
    return special;
  }

  public int getSpeed() {
    return speed;
  }

}
